--- a/templates/money.html
+++ b/templates/money.html
@@ -9,7 +9,7 @@
 <body>
 <h1>It is our Donate html ,Sweep code donated!!!</h1>
 <div class="logo4">
-    <img class="logo44" width="300px"height="300px" src="{{ url_for('static',filename='images/4.jpg ')}}">
+    <img class="logo44"  src="{{ url_for('static',filename='images/4.jpg ')}}">
 </div>
 
 <br>
