--- a/templates/money.html
+++ b/templates/money.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>money</title>
     <link rel="stylesheet" href="static/css/money.css">
 
 </head>
@@ -12,7 +12,7 @@
     <img class="logo44"  src="{{ url_for('static',filename='images/4.jpg ')}}">
 </div>
 
-<br>
+<br />
     <img class="logo44" width="300px"height="300px" src="{{ url_for('static',filename='images/5.png ')}}">
 
 </body>
