--- a/templates/money.html
+++ b/templates/money.html
@@ -13,7 +13,7 @@
 </div>
 
 <br />
-    <img class="logo44" width="300px"height="300px" src="{{ url_for('static',filename='images/5.png ')}}">
+    <img class="logo44"  src="{{ url_for('static',filename='images/5.png ')}}">
 
 </body>
 
