--- a/templates/regist.html
+++ b/templates/regist.html
@@ -13,7 +13,7 @@
                    <input type="email" class="form-control" placeholder="输入邮箱号" name="email" required>
               </div>
               <div class="form-group">
-                   <input type="password" class="form-control" placeholder="输入密码" name="password1">
+                   <input type="password" class="form-control" placeholder="输入密码" name="password1" required>
             </div>
               <div class="form-group">
                    <input type="password" class="form-control" placeholder="确认密码" name="password2">
