--- a/templates/regist.html
+++ b/templates/regist.html
@@ -16,7 +16,7 @@
                    <input type="password" class="form-control" placeholder="输入密码" name="password1" required>
             </div>
               <div class="form-group">
-                   <input type="password" class="form-control" placeholder="确认密码" name="password2">
+                   <input type="password" class="form-control" placeholder="确认密码" name="password2" required>
             </div>
               <div class="form-group">
               <button type="submit" class="btn btn-primary btn-block">注册</button>
