--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
           <div class="form-container">
 
               <div class="form-group">
-                   <input type="email" class="form-control" placeholder="输入邮箱号" name="email">
+                   <input type="email" class="form-control" placeholder="输入邮箱号" name="email" required>
               </div>
               <div class="form-group">
                    <input type="password" class="form-control" placeholder="输入密码" name="password">
