--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
                    <input type="email" class="form-control" placeholder="输入邮箱号" name="email" required>
               </div>
               <div class="form-group">
-                   <input type="password" class="form-control" placeholder="输入密码" name="password">
+                   <input type="password" class="form-control" placeholder="输入密码" name="password" required>
             </div>
               <div class="form-group">
               <button type="submit" class="btn btn-primary btn-block">登录</button>
