--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                    <input type="password" class="form-control" placeholder="输入密码" name="password" required>
             </div>
               <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block">登录</button>
+              <button type="submit" class="btn btn-primary btn-block" value="登录">登录</button>
             </div>
           </div>
     </form>
