--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -12,7 +12,7 @@
 
 .answer-list li{
     list-style: none;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px dashed #ccc;
     padding-top: 10px;
 }
 .avatar{
